--- a/package.json
+++ b/package.json
@@ -1,61 +1,60 @@
 {
-	"name": "movies-portal",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@mantine/core": "^7.16.0",
-		"@mantine/dates": "^7.16.0",
-		"@mantine/form": "^7.16.0",
-		"@mantine/hooks": "^7.16.0",
-		"@reduxjs/toolkit": "^2.5.0",
-		"@tabler/icons-react": "^3.28.1",
-		"@types/node": "^16.18.124",
-		"@types/react": "17.0.2",
-		"@types/react-dom": "^18.3.5",
-		"@types/react-redux": "^7.1.34",
-		"@types/react-router-dom": "^5.3.3",
-		"@typescript-eslint/eslint-plugin": "^8.20.0",
-		"@typescript-eslint/parser": "^8.20.0",
-		"dayjs": "^1.11.13",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-redux": "^9.2.0",
-		"react-router-dom": "^7.1.2",
-		"react-scripts": "^5.0.1",
-		"typescript": "^4.9.5",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"ajv": "^7.2.4",
-		"postcss": "^8.5.1",
-		"postcss-preset-mantine": "^1.17.0",
-		"postcss-simple-vars": "^7.0.1",
-		"prettier": "^3.4.2",
-		"prettier-plugin-tailwindcss": "^0.6.10",
-		"tailwindcss": "^3.4.17"
-	}
+  "name": "movies-portal",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@mantine/core": "^7.16.0",
+    "@mantine/dates": "^7.16.0",
+    "@mantine/form": "^7.16.0",
+    "@mantine/hooks": "^7.16.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tabler/icons-react": "^3.28.1",
+    "@types/node": "^16.18.124",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "^18.3.5",
+    "@types/react-redux": "^7.1.34",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "dayjs": "^1.11.13",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "ajv": "^7.2.4",
+    "postcss": "^8.5.1",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "tailwindcss": "^3.4.17"
+  }
 }
